--- a/minigames/dibujos/dibujo-6/index.html
+++ b/minigames/dibujos/dibujo-6/index.html
@@ -17,15 +17,25 @@
         </style>
         <script type="text/javascript" src="../script.js"></script>
         <script type="text/javascript">
+		var sonidos = 
+            {
+                /*
+                ID:new Audio(FILENAME),  <- remember to use comma
+                */
+                0:new Audio("../../../sounds/Colours/ES_Purple.mp3"),
+				1:new Audio("../../../sounds/Colours/ES_Blue.mp3"),
+				2:new Audio("../../../sounds/Colours/ES_Yellow.mp3"),
+				3:new Audio("../../../sounds/Colours/ES_Black.mp3"),
+				}
             components = ["cara","raya1","raya2","raya3","ala1","ala2","antena1","antena2"];
         </script>
     </head>
     <body>
         <div class="colorSelector">
-            <div class="circle ctype1" onClick="setColor(1);">MORADO</div>
-            <div class="circle ctype2" onClick="setColor(2);">AZUL</div>
-            <div class="circle ctype3" onClick="setColor(3);">AMARILLO</div>
-            <div class="circle ctype4" onClick="setColor(4);"><font color="#FFFFFF">NEGRO</font></div>
+            <div class="circle ctype1" onClick="setColor(1);sonidos[0].play()">MORADO</div>
+            <div class="circle ctype2" onClick="setColor(2);sonidos[1].play()">AZUL</div>
+            <div class="circle ctype3" onClick="setColor(3);sonidos[2].play()">AMARILLO</div>
+            <div class="circle ctype4" onClick="setColor(4);sonidos[3].play()"><font color="#FFFFFF">NEGRO</font></div>
         </div>
         <img src="images/base.png"      class="draw" usemap="#abeja"/>
         <img src="images/cara.png"      class="draw" style="display:none;" usemap="#abeja" id="cara"/>
