Change ANSI to UTF-8 in abecedario

--- a/minigames/abecedario/abecedarioTabla.html
+++ b/minigames/abecedario/abecedarioTabla.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+ï»¿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML>
  <HEAD>
   <TITLE> Abecedario </TITLE>
@@ -24,7 +24,7 @@
 				13:new Audio("../../sounds/Alphabet/ES_LL.mp3"),
 				14:new Audio("../../sounds/Alphabet/ES_M.mp3"),
 				15:new Audio("../../sounds/Alphabet/ES_N.mp3"),
-				16:new Audio("../../sounds/Alphabet/ES_Ñ.mp3"),
+				16:new Audio("../../sounds/Alphabet/ES_Ã‘.mp3"),
 				17:new Audio("../../sounds/Alphabet/ES_O.mp3"),
 				18:new Audio("../../sounds/Alphabet/ES_P.mp3"),
 				19:new Audio("../../sounds/Alphabet/ES_Q.mp3"),
@@ -119,7 +119,7 @@
 <AREA SHAPE=RECT COORDS="877,217,993,372" onclick="window.open('./images/letrilandia/LL.jpg','width=500,height=200,left=400' );sonidos[13].play()">
 <AREA SHAPE=RECT COORDS="58,394,164,556" onclick="window.open('./images/letrilandia/M.jpg','width=500,height=200,left=400' );sonidos[14].play()">
 <AREA SHAPE=RECT COORDS="201,406,241,545" onclick="window.open('./images/letrilandia/N.jpg','width=500,height=200,left=400' );sonidos[15].play()">
-<AREA SHAPE=RECT COORDS="257,402,298,540" onclick="window.open('./images/letrilandia/Ñ.jpg','width=500,height=200,left=400' );sonidos[16].play()">
+<AREA SHAPE=RECT COORDS="257,402,298,540" onclick="window.open('./images/letrilandia/Ã‘.jpg','width=500,height=200,left=400' );sonidos[16].play()">
 <AREA SHAPE=RECT COORDS="335,394,465,561" onclick="window.open('./images/letrilandia/O.jpg','width=500,height=200,left=400' );sonidos[17].play()">
 <AREA SHAPE=RECT COORDS="501,400,609,559" onclick="window.open('./images/letrilandia/P.jpg','width=500,height=200,left=400' );sonidos[18].play()">
 <AREA SHAPE=RECT COORDS="633,403,742,557" onclick="window.open('./images/letrilandia/Q.jpg','width=500,height=200,left=400' );sonidos[19].play()">
