--- a/minigames/abecedario/Fmayus.html
+++ b/minigames/abecedario/Fmayus.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML>
   <script type="text/javascript" src="./scripts/script.js"></script>
 <style type="text/css">
