Colores Puzzle mejorado

--- a/minigames/Colores/puzzle.html
+++ b/minigames/Colores/puzzle.html
@@ -9,12 +9,13 @@
 
 </head>
 <body >
+<div class="opciones"> Los colores</div>
 
 
-	&nbsp;<img src="./images/elef.jpg" width=150px>
+	
 	<section id="contenedorPuzzle">
 
-		<h2>Color azul </h2>
+
 
 
 		<div id="contenedorPiezas" ondragenter="return enter(event)" ondragover="return over(event)" ondrop="return drop(event)" style="cursor: pointer">
@@ -31,7 +32,7 @@
 			
 		
 	</section>
-	
+	<!-- <img src="./images/elef.jpg" width=150px align="right"> -->
 	
 
 	
