--- a/minigames/Colores/puzzle2.html
+++ b/minigames/Colores/puzzle2.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-
-	&nbsp;<img src="./images/ran.jpg" width=150px>
+<div class="opciones"> Los colores</div>
+	<!-- &nbsp;<img src="./images/ran.jpg" width=150px> -->
 	<section id="contenedorPuzzle">
 
-		<h2>Color Verde </h2>
+
 
 
 		<div id="contenedorPiezas" ondragenter="return enter(event)" ondragover="return over(event)" ondrop="return drop(event)">
