--- a/minigames/Colores/puzzle3.html
+++ b/minigames/Colores/puzzle3.html
@@ -11,10 +11,11 @@
 <body >
 
 
-	&nbsp;<img src="./images/pes.png" width=150px>
+<div class="opciones"> Los colores</div>
+	<!-- &nbsp;<img src="./images/pes.png" width=150px> -->
 	<section id="contenedorPuzzle">
 
-		<h2>Color Rojo </h2>
+
 
 
 		<div id="contenedorPiezas" ondragenter="return enter(event)" ondragover="return over(event)" ondrop="return drop(event)" style="cursor: pointer">
