iconitos en estaciones

--- a/minigames/estaciones/elInvierno.html
+++ b/minigames/estaciones/elInvierno.html
@@ -50,5 +50,7 @@ Cuando Junca se vio preparada para transmitir su mensaje, convocó al resto de <b
  </div>
 
 </div>
+<a href="estaciones.html"><img src="../iconos/atras.png" width="70" height="70"></a>
+
  </body>
 </html>
