--- a/minigames/estaciones/elOtoño.html
+++ b/minigames/estaciones/elOtoño.html
@@ -40,10 +40,11 @@
 Las dos gotitas de agua cayeron junto con las demás, formando una gran <b>lluvia </b>plateada<img src="images/lluvia.png" width="80" height="80"  >. La mamá mojó la hoja de un árbol, se resbaló y cayó al suelo produciendo un gran <b>ruido</b>: "plaf".Su hija,  como era más delgadita, tardó más en caer, se posó sobre un paraguas rojo<img src="images/paraguas.png" width="80" height="80"  > realizando un ruidito: "clic". <br>Después resbaló y cayó en la gorro de una <b>niña</b> <img src="images/gorro.png" width="80" height="80"  >, "clic", se deslizó por su nariz  para más tarde gotear en su abrigo azul. <p>Al final acabó en unas botas de agua <img src="images/botas.png" width="80" height="80"  >. Estuvo un buen rato en la bota hasta que la niña comenzó a andar y cayó a un gran <b>charco</b> que había en el suelo. <br>Allí encontró a su mamá  a quien le dio un gran abrazo.<br>
 
 Después de contarse el largo viaje, quedaron fundidas en el gran <b>charco</b> de agua.<p> Más tarde, salió el <b>sol</b>, se reflejó en el charco y apareció un bonito <b>arco iris</b>. <img src="images/arcoiris.png" width="80" height="50"  ><br><br>
-<br><h2>FIN.</h2>
+<h2>FIN.</h2>
 
  </div>
 
 </div>
+<a href="estaciones.html"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>
