--- a/minigames/estaciones/elVerano.html
+++ b/minigames/estaciones/elVerano.html
@@ -51,9 +51,10 @@ Después de salir del agua, Croqui observó las <b>quemaduras</b> que tenía en la 
 
 Croqui aprendió que, el <b>sol en la playa</b>, hay que tomarlo con protección. Además, cada vez que nos bañamos tenemos que <b>volver a echarnos crema</b>, para que no nos pase como a <b>Croqui el cangrejo morenito</b> .<br>
 
-<br><h2>FIN.</h2>
+<h2>FIN.</h2>
  </div>
 
 </div>
+<a href="estaciones.html"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>
