--- a/minigames/estaciones/laPrimavera.html
+++ b/minigames/estaciones/laPrimavera.html
@@ -52,5 +52,6 @@ Al día siguiente, Sara y Laura llevaron al colegio el ramo de flores que le habí
  </div>
 
 </div>
+<a href="estaciones.html"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>
