iconitos en abecedario

--- a/minigames/abecedario/Bmayus.html
+++ b/minigames/abecedario/Bmayus.html
@@ -73,5 +73,8 @@
 <AREA SHAPE=POLY COORDS="198,582,227,573,249,554,257,547,188,502,180,507,161,511,199,582" OnMouseOver="rellenar6('ele17')">
 <AREA SHAPE=POLY COORDS="109,589,182,586,198,582,159,510,136,514,108,514,107,585" OnMouseOver="rellenar6('ele18')">
 </MAP>
+</div>
+</div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </BODY>
 </HTML>
