--- a/minigames/abecedario/Dmayus.html
+++ b/minigames/abecedario/Dmayus.html
@@ -66,5 +66,8 @@
 <AREA SHAPE=POLY COORDS="93,573,94,507,112,505,146,505,175,501,198,567,162,572,93,574" OnMouseOver="rellenar('ele13')">
 <AREA SHAPE=POLY COORDS="27,575,91,574,92,506,27,512,28,576" OnMouseOver="rellenar('ele14')">
 </MAP>
+</div>
+</div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </BODY>
 </HTML>
