--- a/minigames/abecedario/Fmayus.html
+++ b/minigames/abecedario/Fmayus.html
@@ -59,5 +59,8 @@
 <AREA SHAPE=RECT COORDS="114,328,175,405" OnMouseOver="rellenar2('ele9')">
 <AREA SHAPE=RECT COORDS="177,328,240,404" OnMouseOver="rellenar2('ele10')">
 </MAP>
+</div>
+</div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </BODY>
 </HTML>
