--- a/minigames/abecedario/Gmayus.html
+++ b/minigames/abecedario/Gmayus.html
@@ -65,5 +65,8 @@
 <AREA SHAPE=POLY COORDS="171,395,171,458,247,459,247,396,194,395,171,395" OnMouseOver="rellenar4('ele13')">
 <AREA SHAPE=POLY COORDS="249,395,249,457,299,454,301,423,303,395,249,395" OnMouseOver="rellenar4('ele14')">
 </MAP>
+</div>
+</div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </BODY>
 </HTML>
