--- a/minigames/abecedario/Hmayus.html
+++ b/minigames/abecedario/Hmayus.html
@@ -63,5 +63,8 @@
 <AREA SHAPE=RECT COORDS="103,344,160,416" OnMouseOver="rellenar4('ele13')">
 <AREA SHAPE=RECT COORDS="162,344,228,414" OnMouseOver="rellenar4('ele14')">
 </MAP>
+</div>
+</div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </BODY>
 </HTML>
