--- a/minigames/abecedario/Jmayus.html
+++ b/minigames/abecedario/Jmayus.html
@@ -58,5 +58,8 @@
 <AREA SHAPE=RECT COORDS="227,210,310,239" OnMouseOver="rellenar5('ele10')">
 <AREA SHAPE=POLY COORDS="312,210,311,241,383,239,391,231,388,214,382,211,313,210" OnMouseOver="rellenar5('ele11')">
 </MAP>
+</div>
+</div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </BODY>
 </HTML>
