--- a/minigames/abecedario/Kmayus.html
+++ b/minigames/abecedario/Kmayus.html
@@ -64,5 +64,8 @@
 <AREA SHAPE=POLY COORDS="230,485,260,526,200,559,173,515" OnMouseOver="rellenar5('ele13')">
 <AREA SHAPE=POLY COORDS="262,529,293,575,212,574,203,559,203,557" OnMouseOver="rellenar5('ele14')">
 </MAP>
+</div>
+</div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </BODY>
 </HTML>
