--- a/minigames/abecedario/Lmayus.html
+++ b/minigames/abecedario/Lmayus.html
@@ -53,5 +53,8 @@
 <AREA SHAPE=RECT COORDS="152,514,201,586" OnMouseOver="rellenar2('ele7')">
 <AREA SHAPE=RECT COORDS="203,514,262,585" OnMouseOver="rellenar2('ele8')">
 </MAP>
+</div>
+</div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </BODY>
 </HTML>
