--- a/minigames/abecedario/Mmayus.html
+++ b/minigames/abecedario/Mmayus.html
@@ -77,5 +77,8 @@
 <AREA SHAPE=POLY COORDS="234,332,258,372,277,294,256,248,235,331" OnMouseOver="rellenar6('ele19')">
 <AREA SHAPE=POLY COORDS="258,246,277,291,288,251,288,192,272,193,257,244" OnMouseOver="rellenar6('ele20')">
 </MAP>
+</div>
+</div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </BODY>
 </HTML>
