iconitos en colores

--- a/minigames/Colores/globos.html
+++ b/minigames/Colores/globos.html
@@ -64,8 +64,11 @@
 	<TD><img id="verde" name="verde" src="./images/boro7.png" width=200 onclick="verde.src='./images/boro8.png';sonidos[3].play()"></TD>
 	<TD><img id="negro" name="negro" src="./images/boro9.png" width=200 onclick="negro.src='./images/boro10.png';sonidos[4].play()"></TD>
   </TR>
+ 
   </TABLE>
+  
 </div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
 
  </BODY>
 </HTML>
