--- a/minigames/Colores/puzzle.html
+++ b/minigames/Colores/puzzle.html
@@ -34,7 +34,7 @@
 	</section>
 	<!-- <img src="./images/elef.jpg" width=150px align="right"> -->
 	
-
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
 	
 </body>
 </html>
