--- a/minigames/Colores/puzzle2.html
+++ b/minigames/Colores/puzzle2.html
@@ -28,7 +28,7 @@
 			<div class="contenedorPieza" id="cuatro" ondragenter="return enter(event)" ondragover="return over(event)" ondrop="return drop(event)"></div>
 		</div>	
 	</section>
-
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
 	
 </body>
 </html>
