iconitos en dibujos(y me estoy rayando ya)

--- a/minigames/dibujos/dibujo-1/index.html
+++ b/minigames/dibujos/dibujo-1/index.html
@@ -113,8 +113,9 @@
             <DIV CLASS="circle ctype3" onClick="setColor(3);sonidos[2].play()">VERDE</DIV>
             <DIV CLASS="circle ctype4" onClick="setColor(4);sonidos[2].play()">VERDE</DIV>
             <DIV CLASS="circle ctype5" onClick="setColor(5);sonidos[3].play()">MARRON</DIV>
+			<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
         </DIV>
-        
+       
         <IMG SRC="./images/mainImg.jpg" CLASS="imagen" USEMAP="#map1" WIDTH=750 HEIGHT=852 BORDER=0>
 
         <IMG SRC="./images/petalo_1.png" CLASS="imagen" USEMAP="#map1" ID="petalo1" STYLE="display:none;">
@@ -173,5 +174,7 @@
         <!-- Suelo -->
         <AREA SHAPE=RECT COORDS="0,797,749,851" OnClick="pintar('suelo', 5);">
         </MAP>
+	<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
     </BODY>
+	
 </HTML>
