iconitos en festividades

--- a/minigames/festividades/noel/index.html
+++ b/minigames/festividades/noel/index.html
@@ -14,6 +14,8 @@
         <img src="images/botas.png"       class="baseImg" style="display:none;" id="img_botas" />
         <img src="images/gorro.png"       class="baseImg" style="display:none;" id="img_gorro" />
         <img src="images/saco.png"        class="baseImg" style="display:none;" id="img_saco" />
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
         
         <div id="mainDraw">
             <div id="accept_botas"></div>
