--- a/minigames/festividades/pascua/huevopascua2.html
+++ b/minigames/festividades/pascua/huevopascua2.html
@@ -132,7 +132,8 @@ function pintar(obj)
 </MAP>
 <br>
 <div class="letra" > 8 diferencias</div>
-
+<br><br><br>
+        <a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </div>
 
  </BODY>
