--- a/minigames/festividades/reyes/index.html
+++ b/minigames/festividades/reyes/index.html
@@ -44,5 +44,7 @@
             <img src="images/thumbs/Incienso.png"       class="imageDraggable"  id="Incienso"/>
             <img src="images/thumbs/Mirra.png"          class="imageDraggable"  id="Mirra"/>
         </div>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
     </body>
 </html>
