--- a/minigames/festividades/nacimiento/index.html
+++ b/minigames/festividades/nacimiento/index.html
@@ -25,8 +25,9 @@
             <div id="accept_jose"></div>
             <div id="accept_jesus"></div>
             <div id="accept_estrella"></div>
-        </div>
-        
+			
+        </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
         <div id="imageSelector">
             <img src="images/min_maria.png"     class="imageDraggable"  id="maria"/>
             <img src="images/min_sheep1.png"    class="imageDraggable"  id="oveja1"/>
@@ -34,6 +35,7 @@
             <img src="images/min_star.png"      class="imageDraggable"  id="estrella"/>
             <img src="images/min_jesus.png"     class="imageDraggable"  id="jesus"/>
             <img src="images/min_jose.png"      class="imageDraggable"  id="jose"/>
+			
         </div>
     </body>
 </html>
