iconitos en habitos

--- a/minigames/Habitos/animalesGranja.html
+++ b/minigames/Habitos/animalesGranja.html
@@ -103,10 +103,12 @@ function pintar(obj)
  
 
 <IMG SRC="./imagenes/animalesGranjaCompleto.png" class="imagen" USEMAP="#animalesGranja.png" >
+
 <div class="principal"> 
 	<div class="titulo"> 
 		<p style="text-align:center;font-size:50px;margin-top:-5%"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Animales de la Granja </b></p>
 	</div>
+
      <div class="contenedor" > 
 
 
@@ -153,5 +155,6 @@ function pintar(obj)
  </div>
 
 </div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </HTML>
