--- a/minigames/Habitos/laCara.html
+++ b/minigames/Habitos/laCara.html
@@ -116,6 +116,6 @@ function pintar(obj)
 
 </div>
  </body>
-
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
 </HTML>
 
