--- a/minigames/Habitos/lasProfesiones.html
+++ b/minigames/Habitos/lasProfesiones.html
@@ -160,6 +160,6 @@ function pintar(obj)
  </div>
 
 </div>
-
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </HTML>
