--- a/minigames/Habitos/elBano.html
+++ b/minigames/Habitos/elBano.html
@@ -120,5 +120,6 @@ function pintar(obj)
  </div>
 
 </div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </HTML>
