--- a/minigames/Habitos/losTransportes.html
+++ b/minigames/Habitos/losTransportes.html
@@ -116,5 +116,6 @@ function pintar(obj)
 </div>
 
 </div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </HTML>
