iconitos en numeros

--- a/minigames/numeros/cantidadesInverso.html
+++ b/minigames/numeros/cantidadesInverso.html
@@ -83,5 +83,6 @@
 			<img src="../../images/gato.png" class="elem" id="f" name="a6"/>
 		</div>
      </div>
+	 <a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>
