--- a/minigames/numeros/cantidades.html
+++ b/minigames/numeros/cantidades.html
@@ -65,5 +65,6 @@
         <img src="../../images/sero.png" class="elem" id="b" name="bimg"/>
         <img src="../../images/sero.png" class="elem" id="c" name="cimg"/>
      </div>
+	 <a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>
