--- a/minigames/numeros/contorno3.html
+++ b/minigames/numeros/contorno3.html
@@ -58,6 +58,7 @@
 		</MAP>
      </div>
 </div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>
 											   
