--- a/minigames/numeros/repasoContorno1.html
+++ b/minigames/numeros/repasoContorno1.html
@@ -110,5 +110,6 @@
 	 <img src="../../images/conejo.png" class="animal" id="conejoimg"/>
 	  <font id="conejo" size="5" style="left:76%;top:52%;position:absolute"></font>
 </div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>
