--- a/minigames/numeros/repasoContorno2.html
+++ b/minigames/numeros/repasoContorno2.html
@@ -126,5 +126,6 @@
 	 <img src="../../images/conejo.png" class="animal" id="conejoimg2" style="left:75%"/>
 	  <font id="conejo" size="5" style="left:76%;top:52%;position:absolute"></font>
 </div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>
