--- a/minigames/numeros/repasoContorno3.html
+++ b/minigames/numeros/repasoContorno3.html
@@ -128,5 +128,6 @@
 	 <img src="../../images/conejo.png" class="animal" id="conejoimg3" style="left:80%"/>
 	  <font id="conejo" size="5" style="left:76%;top:52%;position:absolute"></font>
 </div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>
