iconitos en numeros2

--- a/minigames/numeros2/contorno6.html
+++ b/minigames/numeros2/contorno6.html
@@ -79,6 +79,7 @@
 </MAP>
 </MAP>
      </div>
-</div>		
+</div>	
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>
