--- a/minigames/numeros2/operacionesSuma01.html
+++ b/minigames/numeros2/operacionesSuma01.html
@@ -109,5 +109,6 @@
             <img src="../../images/huevo.png" height="50" class="contenedorPieza">
             <img src="../../images/huevo.png" height="50" class="contenedorPieza">
         </div>
+		<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
     </body>
 </html>
