--- a/minigames/numeros2/reconocerCantidades2.html
+++ b/minigames/numeros2/reconocerCantidades2.html
@@ -69,5 +69,6 @@
 	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam5" onblur="comprobar(this)" value=""/> <img src="../../images/sero.png" id="img5" width="50"/></td>
   </tr>
   </table>
+  <a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>
