--- a/minigames/numeros2/repasocontorno123.html
+++ b/minigames/numeros2/repasocontorno123.html
@@ -154,5 +154,6 @@ var acierto=0, cont=1;
 	 <img src="../../images/conejo.png" class="animal" id="conejoimg3" style="left:80%"/>
 	  <font id="conejo" size="5" style="left:76%;top:52%;position:absolute"></font>
 </div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>
