--- a/minigames/numeros2/repasocontorno4.html
+++ b/minigames/numeros2/repasocontorno4.html
@@ -164,5 +164,6 @@ var acierto=0, cont=1;
 	 <img src="../../images/conejo.png" class="animal" id="conejoimg4" style="left:82%"/>
 	  <font id="conejo" size="5" style="left:76%;top:52%;position:absolute"></font>
 </div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>
