iconitos en numeros3

--- a/minigames/numeros3/contorno10.html
+++ b/minigames/numeros3/contorno10.html
@@ -108,5 +108,6 @@
             </MAP>
         </div>
     </div>
+	<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
 </body>
 </html>
