--- a/minigames/numeros3/repasocontorno7.html
+++ b/minigames/numeros3/repasocontorno7.html
@@ -186,5 +186,6 @@ var acierto=0, cont=1;
 	 <img src="../../images/conejo.png" class="animal" id="conejoimg7" style="left:80%;top:58%"/>
 	  <font id="conejo" size="5" style="left:76%;top:52%;position:absolute"></font>
 </div>
+<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
  </body>
 </html>																																			
