--- a/minigames/numeros3/contorno0.html
+++ b/minigames/numeros3/contorno0.html
@@ -79,6 +79,7 @@
             </MAP>
         </div>
     </div>
+	<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
 </body>
 </html>
 </html>
