--- a/minigames/numeros3/contorno9.html
+++ b/minigames/numeros3/contorno9.html
@@ -82,6 +82,7 @@
             </MAP>
         </div>
     </div>
+	<a href="game.php"><img src="../iconos/atras.png" width="70" height="70"></a>
 </body>
 </html>
 </html>
